Fix DocSearch modal appearing behind navbar
Set DocSearch-Container z-index to 500 to appear above navbar (z-index: 400)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2111,3 +2111,8 @@ h6[id]::before {
 }
 
 
+
+/* DocSearch modal should appear above navbar */
+.DocSearch-Container {
+  z-index: 500 !important;
+}
